# Rust_Strategy_Api_Exchanges

./: .env  .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs  request_machine.rs  request_state_machine.rs
src/api/: service.rs  strategy.rs
src/behavior/: alternative_behavior.rs  behavior_strategy.rs  mod.rs  standard_behavior.rs
src/connection/: connection_strategy.rs  http_connection.rs  mod.rs  web_socket_connection.rs
src/exchanges/: bybit.rs  exchange_factory.rs  mexc.rs  mod.rs
src/service/: signature_service.rs
