[package]
name = "Strategy_Api_Exchanges"
version = "0.1.0"
edition = "2021"

[dependencies]
quanta = "0.12.3"
chrono = "0.4.38"
dotenv = "0.14.1"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
hex = "0.4"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
