[package]
name = "Strategy_Api_Exchanges"
version = "0.1.0"
edition = "2021"

[dependencies]
quanta = "0.12.3"
chrono = "0.4.38"
dotenv = "0.14.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
hex = "0.4"
sha2 = "0.10"
tokio = { version = "1.41.0", features = ["full"] }
state_machine = "0.1"
async-trait = "0.1"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
